[tool.poetry]
name = "Open Podcast API specification"
version = "0.1.0"
description = "Specifications for the Open Podcast API"
authors = ["Open Podcast API team"]

[tool.poetry.dependencies]
python = "^3.9"
furo = "==2022.12.7"
sphinx-copybutton = "==0.5.1"
sphinx_design = "==0.3.0"
sphinx_external_toc = "==0.3.1"
sphinxcontrib-mermaid = "==0.8.1"
accessible-pygments = "==0.0.3"
sphinx = "==7.0.1"
myst-parser = "==1.0.0"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "==2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
