[tool.poetry]
name = "Open Podcast API specification"
version = "0.1.0"
description = "Specifications for the Open Podcast API"
authors = ["Open Podcast API team"]

[tool.poetry.dependencies]
python = "^3.9"
furo = "==2023.7.26"
sphinx-copybutton = "==0.5.2"
sphinx_design = "==0.5.0"
sphinx-external-toc = {git = "https://github.com/Sporiff/sphinx-external-toc" }
sphinxcontrib-mermaid = "==0.9.2"
accessible-pygments = "==0.0.4"
sphinx = "==6.2.1"
myst-parser = "==2.0.0"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "==2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
